# siglo2

./: README.md  com.github.theironrobin.siglo.json  com.github.theironrobin.siglo2.json  meson.build
data/: com.github.theironrobin.siglo.json.appdata.xml.in  com.github.theironrobin.siglo.json.desktop.in  com.github.theironrobin.siglo.json.gschema.xml  com.github.theironrobin.siglo2.json.appdata.xml.in  com.github.theironrobin.siglo2.json.desktop.in  com.github.theironrobin.siglo2.json.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  siglo2.gresource.xml  siglo2.in  window.py  window.ui
